--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
                     </div>
                     <div class="bg-gray-50 p-4 rounded-lg">
                         <img 
-                            src="https://images.unsplash.com/photo-1559757148-5c350d0d3c56?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" 
+                            src="https://i.ibb.co/BHZDNRFQ/dashboard-with-side-menu-and-note-transcription.jpg" 
                             alt="Tooth Charting Tool"
                             class="w-full h-64 object-cover rounded"
                         >
