Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-12">
                     <div class="bg-gray-50 p-4 rounded-lg">
                         <img 
-                            src="https://images.unsplash.com/photo-1585435557343-3b092031d5ad?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" 
+                            src="https://i.ibb.co/BHZDNRFQ/dashboard-with-side-menu-and-note-transcription.jpg" 
                             alt="Dashboard View"
                             class="w-full h-64 object-cover rounded"
                         >
